state sequence visualisation, pivot circle

--- a/visualizer/main.html
+++ b/visualizer/main.html
@@ -7,8 +7,9 @@
     </script>
   </head>
   <body onload="draw();">
+      <button onClick="drawNextConfig();"> next </button>
     <div>
-      <canvas id="hex-board" width="800" height="800"/>
+      <canvas id="hex-board" width="800" height="800"> </canvas>
     </div>
   </body>
 </html>
