--- a/visualizer/main.html
+++ b/visualizer/main.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <script src="board.js"/>
-    <script>
-    </script>
+    <meta charset="utf-8" ></meta>
+    <script src="game-states.json"> </script>
+    <script src="board.js"> </script>
   </head>
   <body onload="draw();">
       <button onkeypress="aKeyPressed(event);" onClick="drawNextConfig();" tabindex=1> next </button>
