--- a/visualizer/main.html
+++ b/visualizer/main.html
@@ -7,7 +7,7 @@
   </head>
   <body onload="draw();">
     <div align="center">
-      <button style="display:inline" onkeypress="aKeyPressed(event);" onClick="drawNextConfig();" tabindex=1> next </button>
+      <button style="display:inline" onkeypress="aKeyPressed(event);" onClick="drawNextConfig();" autofocus="autofocus" tabindex=1> next </button>
       <div id="step-no" style="display:inline"> </div>
       <button style="display:inline" onkeypress="aKeyPressed(event);" onClick="drawPrevConfig();" tabindex=2> prev </button>
     </div>
